--- a/WWDC/Base.lproj/Main.storyboard
+++ b/WWDC/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bFu-wg-y8E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1789" y="564"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xhC-tL-VI2">
@@ -46,6 +47,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zBD-Op-btA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-288" y="564"/>
         </scene>
     </scenes>
 </document>
